clusters/eldertree/journey/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: journey
  labels:
    app: journey
    environment: production
